# lr-formatter-rs

./: Cargo.toml  LICENSE-APACHE  README.md  out.lrb  out.sol  package-lock.json  test.sh  test.track.json  test.trk
.github/workflows/: format.yml  lint.yml  test.yml
attribute_flatten_struct/: Cargo.toml
cli/: Cargo.toml  README.md
cli/src/: main.rs
docs/: README.md  sol.md  trackjson.md
examples/cli/: Cargo.toml  README.md  main.rs
examples/cli/samples/: Silk_Road.sol
examples/cli/src/: main.rs
lib/: Cargo.toml
lr_formatter_rs/: Cargo.toml
lr_formatter_rs/examples/: read-track.rs  write-track.rs
lr_formatter_rs/src/: draft.txt  errors.rs  formats.rs  lib.rs  track.rs  util.rs
lr_formatter_rs/src/formats/: error.rs  lrb.rs  sol.rs  trackjson.rs
lr_formatter_rs/src/formats/lrb/: mod_flags.rs  reader.rs  writer.rs
lr_formatter_rs/src/formats/lrb/base/: gridver.rs  label.rs  scnline.rs  simline.rs  startoffset.rs
lr_formatter_rs/src/formats/sol/: reader.rs  writer.rs
lr_formatter_rs/src/formats/sol/amf0/: LICENSE-MIT  errors.rs  mod.rs  serialization.rs
lr_formatter_rs/src/formats/trackjson/: reader.rs  serde_boolean.rs  writer.rs
lr_formatter_rs/src/formats/trk/: reader.rs
lr_formatter_rs/src/track/: feature_field_access.rs  grid_version.rs  line_type.rs  properties.rs  rgb_color.rs  vec2.rs
lr_formatter_rs/src/track/properties/: layer.rs  line.rs  metadata.rs  rider.rs  trigger.rs
lr_formatter_rs/src/track/properties/layer/: layer_base.rs  layer_folder.rs  layer_group.rs
lr_formatter_rs/src/track/properties/line/: acceleration_line.rs  line_group.rs  scenery_line.rs  standard_line.rs
lr_formatter_rs/src/track/properties/rider/: rider_base.rs  rider_group.rs
lr_formatter_rs/src/track/properties/trigger/: background_color.rs  camera_focus.rs  camera_pan.rs  camera_zoom.rs  gravity.rs  layer_color.rs  layer_visibility.rs  timeline_speed.rs
lr_formatter_rs/src/track/props/: trigger.rs
lr_formatter_rs/src/track/props/trigger/: background_color.rs  camera_focus.rs  camera_pan.rs  camera_zoom.rs  gravity.rs  layer_color.rs  layer_visibility.rs  timeline_speed.rs
lr_formatter_rs/src/util/: debug_format.rs  string_parser.rs
samples/: Archaeology.lrpk  Bolted_to_the_Wall_merged.lrpk  meta_test.trk  sample_three_lines.sol  sample_three_lines.track.json  test.LRB  test.track.json
scripts/: doc.sh  lint.sh  pre-commit.sh  precheck.sh
src/: format.rs  format_internal.rs  format_lrb.rs  format_track_json.rs  formats.rs  internal.rs  lib.rs  main.rs  track.rs  track_builder.rs  util.rs
tests/: conversion.rs
(+109 files in other folders)
