[package]
name = "lr-formatter-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.0"
bitflags = "2.9.0"
anyhow = "1.0.97"
once_cell = "1.21.3"

[lib]
name = "lr_formatter_rs"
path = "src/lib.rs"

[[bin]]
name = "lr_formatter_rs_cli"
path = "src/main.rs"
