[package]
name = "lr_formatter_rs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.0"
once_cell = "1.21.3"
thiserror = "1.0"
strum = { version = "0.27.1", features = ["derive"] }

[lib]
name = "lr_formatter_rs"
path = "src/lib.rs"
