[package]
name = "track-converter"
version = "1.1.0"
edition = "2024"
authors = ["LRB Spec"]
description = "CLI for converting Line Rider file formats"
license = "MIT"
repository = "https://github.com/lrbspec/lr-formatter-rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.97"
lr_formatter_rs = { path = "../lr_formatter_rs" }
dialoguer = "0.11"

[[bin]]
name = "track-converter"
path = "src/main.rs"
