[package]
name = "lr_formatter_rs"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.0"
once_cell = "1.21.3"
thiserror = "1.0"
derive_builder = "0.20.2"
derive_more = { version = "2", features = ["display"] }
getset = "0.1.6"

[lib]
name = "lr_formatter_rs"
path = "src/lib.rs"
