[package]
name = "lr_formatter_rs_cli"
version = "1.0.0"
edition = "2024"
authors = ["LRB Spec"]
description = "CLI for converting Line Rider file formats"
license = "MIT"
repository = "https://github.com/lrbspec/lr-formatter-rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0.97"
lr_formatter_rs = { path = "../../lib" }

[[bin]]
name = "lr_formatter_rs_cli"
path = "src/main.rs"
